# league_helper

./: .gitignore  Cargo.toml  build.sh  ugg-builds-12.13.1.json.sz
src/: main.rs  util.rs
src/endpoints/: ddragon.rs  mod.rs  ugg.rs
src/models/: ddragon_champions.rs  ddragon_runes_reforged.rs  ddragon_updater.rs  errors.rs  file_info.rs  league_item_set.rs  mod.rs  ugg_client.rs
src/models/ugg/: build_data.rs  item_set.rs  mod.rs  position.rs  rune_page.rs  summoner_spells.rs  ugg_build_data.rs  ugg_client.rs  ugg_role_data.rs
