[package]
name = "league_helper"
version = "0.1.0"
authors = ["Zak <zakmikellides@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json = "0.12"
regex = "1"
strum = { version = "0.20", features = ["derive"] }
futures = "0.3"
lcu_driver = { path = "C:/Users/zakmi/IdeaProjects/lcu_driver" }

[profile.dev]
split-debuginfo = "unpacked"
[profile.test]
split-debuginfo = "unpacked"
