[package]
name = "league_helper"
version = "0.1.0"
authors = ["Zak <zakmikellides@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json = "0.12"
regex = "1"
strum = { version = "0.24", features = ["derive"] }
futures = "0.3"
float-ord = "0.3"
lcu_driver = { git = "https://github.com/ZakisM/lcu_driver" }
snap = "1.0"
deluge = { git = "https://github.com/ZakisM/deluge" }
rdev = "0.5.2"
app_error = { git = "https://github.com/ZakisM/app_error" }

[profile.release]
lto = "thin"
strip = true
